# pipeframe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
docs/: API.md
examples/: quickstart.py  sales_analysis.py  tutorial.ipynb  tutorial_local.ipynb
pipeframe/: __init__.py  exceptions.py
pipeframe/core/: __init__.py  dataframe.py  index.py  series.py
pipeframe/io/: __init__.py  readers.py
pipeframe/utils/: __init__.py  helpers.py
pipeframe/verbs/: __init__.py  groupby.py  manipulate.py  reshape.py
tests/: __init__.py  test_basic.py
wiki-content/: API-Reference.md  Contributing.md  Examples.md  FAQ.md  Home.md  Installation.md  Quick-Start.md
