[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeframe"
version = "0.2.1"
description = "Pipe your data naturally - intuitive data manipulation with readable syntax"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dr. Yasser Mustafa", email = "yasser.mustafan@gmail.com"}
]
maintainers = [
    {name = "Dr. Yasser Mustafa", email = "yasser.mustafan@gmail.com"}
]
keywords = [
    "data", "manipulation", "pandas", "dplyr", "grammar", 
    "data-science", "analysis", "dataframe", "pipe", "tidyverse",
    "data-pipeline", "etl", "data-wrangling"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.0.0,<4.0.0",
    "xlrd>=2.0.0,<3.0.0",
]
parquet = [
    "pyarrow>=6.0.0,<15.0.0",
]
sql = [
    "sqlalchemy>=1.4.0,<3.0.0",
]
plot = [
    "matplotlib>=3.4.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "plotnine>=0.10.0,<1.0.0",
]
performance = [
    "polars>=0.18.0,<1.0.0",
    "duckdb>=0.8.0,<1.0.0",
]
all = [
    "openpyxl>=3.0.0,<4.0.0",
    "xlrd>=2.0.0,<3.0.0",
    "pyarrow>=6.0.0,<15.0.0",
    "sqlalchemy>=1.4.0,<3.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "plotnine>=0.10.0,<1.0.0",
]
test = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "pytest-xdist>=3.0.0,<4.0.0",
    "hypothesis>=6.0.0,<7.0.0",
]
docs = [
    "sphinx>=5.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.0.0,<3.0.0",
    "nbsphinx>=0.8.0,<1.0.0",
    "myst-parser>=1.0.0,<3.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pandas-stubs>=1.5.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Yasser03/pipeframe"
Documentation = "https://pipeframe.readthedocs.io"
Repository = "https://github.com/Yasser03/pipeframe"
"Bug Tracker" = "https://github.com/Yasser03/pipeframe/issues"
Changelog = "https://github.com/Yasser03/pipeframe/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeframe*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
pipeframe = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["pipeframe"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
